# coker

./: .flake8  .gitignore  CLAUDE.md  Coker Data Model.txt  Roadmap.md  numpy-nonlinear-optimisation-plan.md  optimisation-design-tasks.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  pypi.yaml.yml  pypi.yml  test-and-lint.yml
assets/: hexapod.json
coker_runtime/: Cargo.toml
coker_runtime/crates/coker-bytecode/: Cargo.toml
coker_runtime/crates/coker-bytecode/src/: lib.rs
coker_runtime/crates/coker-compiler/: Cargo.toml
coker_runtime/crates/coker-compiler/src/: context.rs  lib.rs  lower.rs  model.rs  tests.rs  util.rs
coker_runtime/crates/coker-python/: Cargo.toml
coker_runtime/crates/coker-python/src/: lib.rs
coker_runtime/crates/coker-runtime/: Cargo.toml
coker_runtime/crates/coker-runtime/src/: execute.rs  lib.rs  ops.rs  static_module.rs  tests.rs  validate.rs  workspace.rs
crates/coker/: Cargo.toml
crates/coker/src/: errors.rs  lib.rs  project.rs
crates/coker/src/editor/: app_state.rs  entry_point.rs  mod.rs
crates/coker/src/editor/workflow/: design.rs  mod.rs
crates/coker/src/transpiler/: kernel_parser.rs  mod.rs
docs/: backend_architecture.rst  conf.py  getting_started.rst  index.rst  osqp_integration_plan.md
docs/api/: conditional.rst  functions.rst  index.rst  spaces.rst
examples/: pid_example.py
scripts/: double_pendulum.py  hexapod_viz.py  static_hexapod_codesign.py
src/coker/: __init__.py  api.py  helpers.py  optimisation.py  system_api.py
src/coker/algebra/: __init__.py  dimensions.py  factories.py  function.py  helpers.py  kernel.py  ops.py  tensor.py
src/coker/backends/: __init__.py  backend.py  evaluator.py
src/coker/backends/casadi/: __init__.py  casadi.py  dae_optimiser.py  optimiser.py  variational_solver.py
src/coker/backends/coker/: __init__.py  ast_preprocessing.py  ast_rewriting.py  core.py  layers.py  memory.py  op_impl.py  runtime.py  sparse_tensor.py  tensor_contants.py  weights.py
src/coker/backends/jax/: __init__.py
src/coker/backends/numpy/: __init__.py  core.py  optimisation.py
src/coker/backends/sympy/: __init__.py  shape.py
src/coker/dynamics/: __init__.py  dynamical_system.py  transcription_helpers.py  types.py
src/coker/modelling/: __init__.py  coker_abc.py
src/coker/projects/: __init__.py
src/coker/std_lib/common/: __init__.py  signal_processing.py
src/coker/toolkits/codesign/: __init__.py
src/coker/toolkits/dynamical_systems/: __init__.py  fitting.py
src/coker/toolkits/kinematics/: __init__.py  factories.py  mujoco.py  rigid_body.py  types.py  visualiser.py
src/coker/toolkits/spatial/: __init__.py  algebra.py  unit_quaternion.py
src/coker/toolkits/system_modelling/: __init__.py  api.py
src/coker/toolkits/system_modelling/modelling/: __init__.py  coker_abc.py
src/coker/toolkits/system_modelling/projects/: __init__.py
src/coker/toolkits/system_modelling/std_lib/: __init__.py
src/coker/toolkits/system_modelling/std_lib/common/: __init__.py
test/: conftest.py  test_symbolic.py  util.py
test/backends/: test_coker_backend.py
test/backends/casadi/: test_transcription.py
test/backends/coker/: test_coker_backend.py  test_coker_ops.py  test_coker_sparse_tensor.py
test/dynamical_systems/: test_construct_systems.py  test_helpers.py  test_variational_solver.py
test/interface/: test_library_api.py
test/symbolic_api/: test_symbolic.py  test_symbolic_function_manipulation.py
test/toolkits/: test_codesign.py  test_kinematics.py  test_spatial_algebra.py
test/toolkits/dynamical_systems/: test_construct_systems.py
test/toolkits/kinematics/: test_kinematics.py  test_kinematics_examples.py
tests/: conftest.py  util.py
tests/backends/casadi/: test_dae_optimiser.py  test_higher_order_composition.py  test_transcription.py
tests/backends/coker/: test_coker_backend.py  test_coker_ops.py  test_coker_runtime.py  test_coker_runtime_performance.py  test_coker_sparse_tensor.py
tests/backends/numpy/: test_numpy_performance.py  test_sparse_constant.py
tests/backends/sympy/: test_sympy_printing.py
tests/benchmarks/: benchmark_backends.py
tests/dynamical_systems/: test_direct_sum.py  test_helpers.py  test_variational_solver.py  test_variational_solver_callback.py
tests/interface/: test_library_api.py
tests/symbolic_api/: test_conditional.py  test_higher_order.py  test_ops.py  test_symbolic.py  test_symbolic_function_manipulation.py
tests/toolkits/: test_codesign.py  test_spatial_algebra.py  test_system_modelling.py
tests/toolkits/kinematics/: test_kinematics.py  test_kinematics_examples.py
