[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "coker"
version = "0.3.26"
requires-python = ">=3.10"
authors = [
    {name = "Peter Cudmore", email = "drpetercudmore@gmail.com"}
]
maintainers = [
    {name = "Peter Cudmore", email = "drpetercudmore@gmail.com"}
]
license = "MPL-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
]
description = "Coker Mathematical Programming Toolkit"
readme = "README.md"
dependencies = [
    "numpy >= 2",
    "sympy",
    "scipy",
    "typing-extensions",
]

[project.optional-dependencies]
casadi = [
    "casadi>=3.7.0,<4",
]
jax = [
    "jax>=0.10,<0.11; python_version >= '3.11'",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "pytest",
    "pytest-mypy",
    "mypy",
]
ci = [
    "pytest>=8.0.0,<9",
    "pytest-mypy",
    "black==25.1.0",
    "flake8>=7.1.1,<8",
    "maturin>=1.7,<2",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = [
    "tests",
]
markers = [
    "perf: machine-dependent performance assertions run only in the dedicated perf suite",
]
[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312", "py313"]

[tool.maturin]
bindings = "pyo3"
manifest-path = "coker_runtime/crates/coker-python/Cargo.toml"
python-source = "src"
python-packages = ["coker"]
module-name = "coker._coker_runtime"