[workspace]
members = [
    "crates/coker-bytecode",
    "crates/coker-runtime",
    "crates/coker-compiler",
    "crates/coker-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"
authors = ["Peter Cudmore <drpetercudmore@gmail.com>"]

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["macros", "extension-module"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck", "pointer_width_64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
