[package]
name = "coker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coker"


[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
pyo3 = {version = "0.23.4", features = ['auto-initialize']}
axum = {version = "0.8.1"}
tokio = "1.43.0"
serde = { version = "1.0.217", features = ["derive", "alloc"] }
serde_json = "1.0.138"
toml = "0.8.20"